pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints9.pkl
foo: Int(IntSeq(1, 5).toList().contains(this)) = 10
